fix spacing on site container

--- a/src/style/components/layout/_Site.scss
+++ b/src/style/components/layout/_Site.scss
@@ -1,4 +1,5 @@
 @use 'sass:color';
+@use 'sass:math';
 @use '../../theme';
 @use '../../mixins';
 
@@ -20,7 +21,7 @@
     / 1fr        3fr          1fr;
   max-block-size: 100vb;
   max-inline-size: 100vi;
-  padding: theme.$spacer-4xl;
+  padding: theme.$spacer-3xl theme.$spacer-4xl;
 
   &-title {
     grid-area: Site-title;
